@@ -1,3 +1,10 @@
+2022-07-14T08:19:56Z:
+* notice: last 14d: unq all: 2 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 225 357 / 240 383
+* notice: next accum: outdated-unq outdated-all / unq all: 225 357 / 241 383
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-30 2022-07-14]
+
 2022-07-14T01:41:13Z:
 * notice: last 14d: unq all: 2 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 224 355 / 240 382
